# MidiEditor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS  Doxyfile  README.md  midieditor.pro  resources.qrc  xmake.lua
.github/workflows/: cmake.yaml  compile-shaders.yml  compile.yaml  deploy-pages.yml  qmake.yaml  qmake.yml  xmake-release.yaml  xmake.yaml  xmake.yml
manual/: editing-midi-files.html  introduction.html  menu-tools.html
packaging/org.midieditor.manual/meta/: package.xml
packaging/org.midieditor.midieditor/meta/: installscript.qs  package.xml
scripts/building/: build-windows-msvc.bat  build-windows.sh
scripts/packaging/debian/: MidiEditor.desktop  control
scripts/packaging/windows/: config.xml  controlscript.qs  create_windows_setup.sh
scripts/packaging/windows/windows-installer/: windows-installer.mpi
scripts/xmake/: packages.lua
src/: Terminal.cpp  Terminal.h  UpdateManager.cpp  main.cpp
src/MidiEvent/: ChannelPressureEvent.cpp  ChannelPressureEvent.h  ControlChangeEvent.cpp  ControlChangeEvent.h  KeyPressureEvent.cpp  KeyPressureEvent.h  KeySignatureEvent.cpp  KeySignatureEvent.h  MidiEvent.cpp  MidiEvent.h  NoteOnEvent.cpp  NoteOnEvent.h  OffEvent.cpp  OffEvent.h  OnEvent.cpp  OnEvent.h  PitchBendEvent.cpp  PitchBendEvent.h  ProgChangeEvent.cpp  ProgChangeEvent.h  SysExEvent.cpp  SysExEvent.h  TempoChangeEvent.cpp  TempoChangeEvent.h  TextEvent.cpp  TextEvent.h  TimeSignatureEvent.cpp  TimeSignatureEvent.h  UnknownEvent.cpp  UnknownEvent.h
src/converter/GuitarPro/: Gp345Parser.cpp  Gp345Parser.h  Gp678Parser.cpp  GpBinaryReader.cpp  GpImporter.cpp  GpUnzip.cpp  GpUnzip.h
src/converter/MML/: MmlConverter.cpp  MmlConverter.h  MmlImporter.cpp  MmlImporter.h  MmlLexer.cpp  MmlLexer.h  MmlMidiWriter.cpp  MmlMidiWriter.h  MmlModels.h  MmlParser.cpp  MmlParser.h  ThreeMleParser.cpp  ThreeMleParser.h
src/converter/MusicXml/: MsczImporter.cpp  MusicXmlImporter.cpp  XmlScoreToMidi.cpp
src/gui/: AboutDialog.cpp  AboutDialog.h  AcceleratedMatrixWidget.cpp  AcceleratedMatrixWidget.h  Appearance.cpp  Appearance.h  AppearanceSettingsWidget.cpp  AppearanceSettingsWidget.h  ApplicationSettingsWidget.cpp  ApplicationSettingsWidget.h  AudioExportDialog.cpp  AudioExportDialog.h  ChannelListWidget.cpp  ChannelListWidget.h  ChannelVisibilityManager.cpp  ChannelVisibilityManager.h  ClickButton.cpp  ClickButton.h  ColoredWidget.cpp  ColoredWidget.h  CompleteMidiSetupDialog.cpp  CompleteMidiSetupDialog.h  ControlChangeSettingsWidget.cpp  ControlChangeSettingsWidget.h  DataEditor.cpp  DataEditor.h  DeleteOverlapsDialog.cpp  DeleteOverlapsDialog.h  DownloadSoundFontDialog.cpp  DownloadSoundFontDialog.h  DrumKitPreset.cpp  DrumKitPreset.h  EventListWidget.cpp  EventListWidget.h  EventWidget.cpp  EventWidget.h  ExplodeChordsDialog.cpp  ExplodeChordsDialog.h  FFXIVFixerDialog.cpp  FFXIVFixerDialog.h  (+84 more)
src/midi/: ChordDetector.cpp  ChordDetector.h  FluidSynthEngine.cpp  FluidSynthEngine.h  ImportGuitarPro.cpp  ImportGuitarPro.h  ImportMML.cpp  ImportMML.h  InstrumentDefinitions.cpp  InstrumentDefinitions.h  Metronome.cpp  Metronome.h  MidiChannel.cpp  MidiChannel.h  MidiFile.cpp  MidiFile.h  MidiInput.cpp  MidiInput.h  MidiOutput.cpp  MidiOutput.h  MidiPlayer.cpp  MidiPlayer.h  MidiTrack.cpp  MidiTrack.h  PlayerThread.cpp  PlayerThread.h  SenderThread.cpp  SenderThread.h  SingleNotePlayer.cpp  SingleNotePlayer.h
src/protocol/: Protocol.cpp  Protocol.h  ProtocolEntry.cpp  ProtocolEntry.h  ProtocolItem.cpp  ProtocolItem.h  ProtocolStep.cpp  ProtocolStep.h
src/shaders/: CMakeLists.txt  background.frag  background.vert  circle.frag  circle.vert  line.frag  line.vert  midi_event.frag  midi_event.vert  piano.frag  piano.vert  piano_complex.frag  piano_complex.vert  shaders.qrc  text.frag  text.vert  triangle.frag  triangle.vert  xmake.lua
src/shaders/compiled/: background.frag.qsb  background.vert.qsb  circle.frag.qsb  circle.vert.qsb  line.frag.qsb  line.vert.qsb  midi_event.frag.qsb  midi_event.vert.qsb  piano.frag.qsb  piano.vert.qsb  piano_complex.frag.qsb  piano_complex.vert.qsb  text.frag.qsb  text.vert.qsb  triangle.frag.qsb  triangle.vert.qsb
src/support/: FFXIVChannelFixer.cpp  FFXIVChannelFixer.h
src/tool/: DeleteOverlapsTool.cpp  DeleteOverlapsTool.h  EditorTool.cpp  EditorTool.h  EraserTool.cpp  EraserTool.h  EventMoveTool.cpp  EventMoveTool.h  EventTool.cpp  EventTool.h  GlueTool.cpp  GlueTool.h  MeasureTool.cpp  MeasureTool.h  NewNoteTool.cpp  NewNoteTool.h  ScissorsTool.cpp  ScissorsTool.h  SelectTool.cpp  SelectTool.h  Selection.cpp  Selection.h  SharedClipboard.cpp  SharedClipboard.h  SizeChangeTool.cpp  SizeChangeTool.h  StandardTool.cpp  StandardTool.h  StrummerTool.cpp  StrummerTool.h  TempoTool.cpp  TempoTool.h  TimeSignatureTool.cpp  TimeSignatureTool.h  Tool.cpp  Tool.h  ToolButton.cpp  ToolButton.h
